[SP-FEATURE]Add user model and methods. (#2)
* add types

* add user model

* setup user route

* setup userRoutes

* add user routes

* add types for json webtoken
add webtoken generator

* add types to the package

* update user model according to need
add user controller

* add auth middleware

* add auth middleware

* add user route and fix other

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,5 +2,8 @@
   "extends": ["airbnb", "airbnb-typescript", "prettier"],
   "parserOptions": {
     "project": "./tsconfig.json"
+  },
+  "rules": {
+    "no-underscore-dangle": ["error", { "allow": ["_id"] }]
   }
 }
