--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   "license": "MIT",
   "description": "",
   "dependencies": {
-    "@types/mongoose": "^5.11.97",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
@@ -26,15 +25,17 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.7.0",
-    "mongoose": "^8.4.1"
+    "mongoose": "^8.4.1",
+    "multer": "1.4.5-lts.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/node": "^20.14.1",
-    "@typescript-eslint/parser": "^7.12.0",
+    "@types/multer": "^1.4.11",
+    "@types/node": "^20.14.2",
+    "@typescript-eslint/parser": "^7.13.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-config-next": "14.1.2",
@@ -42,7 +43,7 @@
     "husky": "^8.0.3",
     "lint-staged": "^15.2.5",
     "nodemon": "^3.1.3",
-    "prettier": "^3.3.0",
+    "prettier": "^3.3.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   }
